# ORION

./: .dockerignore  .env  .env.example  .env.sample  .gitignore  .travis.yml  CONTRIBUTING.md  Dockerfile  LICENSE  README-CONTRIBUTER.md  README.md  celery_worker.py  cfde-config.yml  create_env.sh  default-config.yml  default-graph-spec.yml  default-sources-spec.yml  docker-compose-pharos.yaml  docker-compose-worker.yml  docker-compose.yml  load_all.py  pyproject.toml  requirements.txt  run_just_one.py  set_up_dev_env.sh  set_up_test_env.sh  setup_env.sh  yeast-graph-spec.yml
Common/: answercoalesce_build.py  biolink_constants.py  biolink_utils.py  build_manager.py  collapse_qualifiers.py  config.py  containers.py  context.jsonld  csv_extractor.py  data_sources.py  db_connectors.py  default-config.yml  extractor.py  hgvs_utils.py  kgx_file_converter.py  kgx_file_merger.py  kgx_file_normalizer.py  kgx_file_writer.py  kgx_metadata.py  kgx_validation.py  kgxmodel.py  load_manager.py  loader_interface.py  memgraph_tools.py  merging.py  meta_kg.py  metadata.py  metadata_manager.py  neo4j_meta_kg.py  neo4j_tools.py  node_types.py  normalization.py  predicates.py  prefixes.py  rdf_file_writer.py  redundant_kg.py  run_all.py  supplementation.py  test.ttl  test_common.py  (+1 more)
FooDB/: README.md
GOA/: README.md
GTEx/: README.md
IntAct/: README.md
PHAROS/: README.md
QuickGO/: README.md  requirements.txt
ViralProteome/: .travis.yml  LICENSE  README.md
cli/: generate_ac_files.py  generate_meta_kg.py  generate_redundant_kg.py  graph_operations.py  memgraph_dump.py  merge_kgs.py  neo4j_dump.py
docs/: ORION.ipynb  metadata-driven-parser-design.md  mgi-ingest-todo.md  parser-yaml-redesign.md  parser-yaml-semantic-table-design.md
graph_specs/: BINDING-DB_Automat.yml  HVPPI_Automate.yml  automat-graph-spec.yaml  cfde-graph-spec.yaml  clingen-data.yaml  clingen-gene-disease-validity-data.yaml  clingen-variant-pathogenicity-data.yaml  clingen_data.yaml  cohd-graph-spec.yaml  ctkp-graph-spec.yaml  default-graph-spec.yml  dug-graph-spec.yaml  example-graph-spec.yaml  idkg-graph-spec.yml  litcoin-graph-spec.yaml  litcoin-graph-spec.yml  matrix-graph-spec.yaml  monarch-kg-full-graph-spec.yaml  multiomics-graph-spec.yaml  reactome-graph-spec.yaml  reactome-graph-spec.yml  robokop-graph-spec.yaml  robokop-graph-spec.yml  robokop-nonredundant.yaml  rule-mining-graph-spec.yaml  signor-graph-spec.yml  testing-graph-spec.yml  yeast-graph-spec.yml
kgx-load-helm/: Chart.yaml  values.yaml
normalization_benchmark/: rerun_query.py  run_benchmark.py
orion/: __init__.py  answercoalesce_build.py  biolink_constants.py  biolink_utils.py  build_manager.py  collapse_qualifiers.py  config.py  containers.py  croissant_resolver.py  data_sources.py  db_connectors.py  exceptions.py  extractor.py  graph_pipeline.py  graph_registry.py  graph_versioning.py  ingest_pipeline.py  kgx_bundle.py  kgx_file_converter.py  kgx_file_merger.py  kgx_file_normalizer.py  kgx_file_writer.py  kgx_metadata.py  kgx_validation.py  kgxmodel.py  load_manager.py  loader_interface.py  logging.py  memgraph_tools.py  merging.py  meta_kg.py  metadata.py  metadata_aggregation.py  metadata_driven_loader.py  metadata_transforms.py  neo4j_meta_kg.py  neo4j_tools.py  normalization.py  parser_spec.py  predicates.py  (+7 more)
scripts/: compare_hpoa_rationalization.py
tests/: __init__.py  conftest.py  test_bgee_loader.py  test_bindingdb.py  test_build_graph_end_to_end.py  test_build_results.py  test_cli_smoke.py  test_common.py  test_config.py  test_ctd_loader.py  test_drugmechdb.py  test_file_writer.py  test_goa_loader.py  test_graph_registry.py  test_graph_spec.py  test_graph_versioning.py  test_gtex.py  test_gwas_catalog.py  test_hetio_loader.py  test_hpoa_omim_orphanet_loaders.py  test_kgx_bundle.py  test_kgx_file_normalizer.py  test_loaders.py  test_merging.py  test_metadata_driven_parser.py  test_metadata_manager.py  test_mgi_loader.py  test_monarchkg_go_filter.py  test_monarchkg_hpoa_filter.py  test_monarchkg_mondo_filter.py  test_utils.py  (+9 more)
(+320 files in other folders)
